# VMkatz

./: Cargo.toml  README.md
.github/workflows/: clippy.yml  release.yml
src/: discover.rs  dump.rs  error.rs  lib.rs  main.rs  utils.rs
src/disk/: vdi.rs  vhdx.rs  vmfs.rs
src/hyperv/: layer.rs  vmrs.rs
src/lsass/: cloudap.rs  credman.rs  dpapi.rs  finder.rs  kerberos.rs  livessp.rs  mod.rs  msv.rs  ssp.rs  types.rs  wdigest.rs
src/paging/: entry.rs  mod.rs  pagefile.rs  translate.rs
src/qemu/: layer.rs  mod.rs  savevm.rs
src/sam/: bootkey.rs  dpapi_masterkey.rs  hashes.rs  lsa.rs  mod.rs  ntfs_fallback.rs  ntfs_reader.rs  partition.rs
src/vbox/: layer.rs
src/vmware/: layer.rs
src/windows/: offsets.rs  process.rs
